GNU gzip NEWS                                    -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]

** Bug fixes

  gzip -cdf now properly handles input consisting of gzip'd data followed
  by uncompressed data.  Before it would output raw compressed input, too.
  For example, now "(printf x|gzip; echo y)|gzip -dcf" prints "xy\n",
  while before it would print "x<compressed data>y\n".


* Noteworthy changes in release 1.4 (2010-01-20) [stable]

** Bug fixes

  gzip -d could segfault and/or clobber the stack, possibly leading to
  arbitrary code execution.  This affects x86_64 but not 32-bit systems.
  This fixes CVE-2010-0001.
  For more details, see http://bugzilla.redhat.com/554418

  gzip -d would fail with a CRC error for some valid inputs.
  So far, the only valid input known to exhibit this failure was
  compressed "from FAT filesystem (MS-DOS, OS/2, NT)".  In addition,
  to trigger the failure, your memcpy implementation must copy in
  the "reverse" order.


* Noteworthy changes in release 1.3.14 (2009-10-30) [beta]

** Bug fixes

  gzip no longer fails when there is exactly one trailing NUL byte
  gzip has always accepted trailing NUL bytes.  Note the plural.

  zdiff would exit with status 2 (indicating an error) rather than 1 to
  indicate differences when both inputs were compressed and different.

  zdiff would fail to print differences in two compressed inputs

  zgrep -f - didn't work


* Noteworthy changes in release 1.3.13 (2009-09-30) [stable]

** Bug fixes

  gzip -d no longer fails with "-" as 2nd or subsequent argument

  gzip no longer ignores a close-induced write failure, e.g., on NFS

  gzip -d no longer segfaults on certain invalid inputs


Major changes in Gzip 1.3.12 (2007-04-13)

* znew now uses $TMPDIR (default /tmp) instead of always using /tmp.

* 'gzip -f foo.gz' now creates a file foo.gz.gz instead of complaining.

* It is now documented that gzip ignores case when examining file name