@@ -237,6 +237,7 @@ Amos Shapira            amoss@cs.huji.ac.il
 Rick Sladkey            jrs@world.std.com
 Daniel L Smith          dls@autodesk.com
 Fred Smith              fredex%fcshome@merk.merk.com
+Ripduman Sohan          Ripduman.Sohan@cl.cam.ac.uk
 Stephen Soliday         soliday@ncat.edu
 Paul Southworth         pauls@css.itd.umich.edu
 Rob Spencer             robbie@winkle.bhpese.oz.au
